Fix autorotate when "only in tablet mode" is selected

BUG: 428626

The setTabletModeAvailable and setTabletModeEngaged properties
were not copied across in Config::apply.